--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
     color:var(--ink);
     /* Pixel-art arka plan */
-    background: url('assets/website.background.png') no-repeat center fixed; /* merkez + sabit */ /* [1] */
+    background: url('Assets/website.backgraund.png') no-repeat center fixed; /* merkez + sabit */ /* [1] */
     background-size: cover; /* tam kaplama */ /* [2] */
     image-rendering: crisp-edges; /* Firefox/safari */ /* [3] */
     image-rendering: pixelated;   /* Chromium */ /* [3] */
