--- a/index.html
+++ b/index.html
@@ -21,19 +21,34 @@
   body{
     margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
     color:var(--ink);
-    /* Pixel-art arka plan */
-    background: url('Assets/website.backgraund.png') no-repeat center fixed; /* merkez + sabit */ /* [1] */
-    background-size: cover; /* tam kaplama */ /* [2] */
-    image-rendering: crisp-edges; /* Firefox/safari */ /* [3] */
-    image-rendering: pixelated;   /* Chromium */ /* [3] */
+    /* Pixel-art arka plan (dosya adı ve klasör senin belirttiğin biçimde kaldı) */
+    background: url('Assets/website.backgraund.png') no-repeat center fixed; /* merkez + sabit */ /* [ref] */ 
+    background-size: cover; /* tam kaplama */ /* [ref] */
+    image-rendering: crisp-edges; /* Firefox/Safari */ /* [ref] */
+    image-rendering: pixelated;   /* Chromium */ /* [ref] */
     min-height:100vh; display:flex; flex-direction:column;
   }
+
+  /* Okunurluğu artırılmış üst başlık */
   .brand{
     text-align:center; padding:26px 16px 10px;
-    font-size: clamp(20px, 2.6vw, 28px); letter-spacing:.22em; text-transform:uppercase;
-    color: var(--gold-lite);
-    text-shadow: 0 0 6px rgba(237,220,145,.25);
+    font-size: clamp(32px, 6vw, 96px);    /* daha büyük başlık */ 
+    font-weight: 900;                     /* ekstra kalın */ 
+    letter-spacing:.20em; text-transform:uppercase;
+    color: #F4E7C3;                       /* açık krem/şampanya (yüksek kontrast) */
+    text-shadow:
+      /* 4 yönlü siyah kontur */
+      1px 1px 0 rgba(0,0,0,.85),
+      -1px 1px 0 rgba(0,0,0,.85),
+      1px -1px 0 rgba(0,0,0,.85),
+      -1px -1px 0 rgba(0,0,0,.85),
+      /* hafif alt çizgi derinliği */
+      0 2px 1px rgba(0,0,0,.55),
+      /* yumuşak dış parlama */
+      0 0 12px rgba(244,231,195,.28),
+      0 0 24px rgba(244,231,195,.18);
   }
+
   .wrap{ flex:1; display:grid; place-items:center; padding:18px; }
   .card{
     text-align:center; padding:48px 28px; max-width:920px; width:92%;
@@ -75,8 +90,6 @@
     border-color: rgba(84,140,180,.55);
   }
   footer{ margin-top:22px; opacity:.72; font-size:14px; color:var(--gold-lite); }
-  /* İsteğe bağlı: görselin kadrajını biraz yukarı almak için aşağıdaki gibi oynayabilirsin */
-  /* body{ background-position: 50% 42%; } */ /* [5] */
 </style>
 </head>
 <body>
