Fix background image filename typo in index.html
Corrected the background image filename from 'website.background.png' to 'website.backgraund.png' in the body CSS. This resolves the issue where the background image was not loading due to a misspelled filename.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   body{
     margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
     color:var(--ink);
-    background: url('Assets/website.background.png') no-repeat center center;
+    background: url('Assets/website.backgraund.png') no-repeat center center;
     background-size: cover;
     background-attachment: scroll;
     image-rendering: crisp-edges;
