--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   }
   @media (max-width: 768px) {
     body {
-      background-size: contain;
+      background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
       background-attachment: scroll;
