--- a/index.html
+++ b/index.html
@@ -1,112 +1,127 @@
 <!DOCTYPE html>
-<html lang="tr">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>DODGE SKILL | COMING SOON</title>
-<meta name="description" content="DODGE SKILL | COMING SOON - THEEM STUDIOS" />
-<style>
-  :root{
-    --bg:#0A0E14;
-    --ink:#E6E8EE;
-    --ink-2:#B8C0CC;
-    --gold:#C4A15B;
-    --gold-lite:#EDDC91;
-    --blue:#548CB4;
-    --panel:rgba(10,14,20,.60);
-    --stroke:rgba(196,161,91,.35); 
-  }
-  *{box-sizing:border-box}
-  html, body { height: 100%; }
-  body{
-    margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-    color:var(--ink);
-    background: url('Assets/website.backgraund.png') no-repeat center center;
-    background-size: cover;
-    background-attachment: scroll;
-    image-rendering: crisp-edges;
-    image-rendering: pixelated;
-    min-height:100vh; display:flex; flex-direction:column;
-  }
-  @media (max-width: 768px) {
-    body {
-      background-size: cover;
-      background-position: center center;
-      background-repeat: no-repeat;
-      background-attachment: scroll;
-    }
-  }
-  .brand{
-    text-align:center; padding:26px 16px 10px;
-    font-size: clamp(32px, 6vw, 96px); 
-    font-weight: 900;
-    letter-spacing:.20em; text-transform:uppercase;
-    color: #F4E7C3;
-    text-shadow:
-      0 0 6px rgba(244,231,195,.30),
-      0 0 14px rgba(244,231,195,.22),
-      0 0 28px rgba(196,161,91,.20),
-      0 2px 0 rgba(0,0,0,.50);
-  }
-
-  .wrap{ flex:1; display:grid; place-items:center; padding:18px; }
-  .card{
-    text-align:center; padding:48px 28px; max-width:920px; width:92%;
-    background: var(--panel);
-    border:1px solid var(--stroke); border-radius:14px;
-    box-shadow:
-      0 0 0 1px rgba(196,161,91,.15) inset,
-      0 12px 32px rgba(0,0,0,.45),
-      0 0 24px rgba(84,140,180,.12);
-    position:relative;
-  }
-  .card:before, .card:after{
-    content:""; position:absolute; width:18px; height:18px; border:2px solid var(--gold);
-  }
-  .card:before{ top:-2px; left:-2px; border-right:none; border-bottom:none; }
-  .card:after{ bottom:-2px; right:-2px; border-left:none; border-top:none; }
-
-  h1{
-    font-size: clamp(30px, 6vw, 56px); margin:6px 0 8px;
-    letter-spacing:.06em; text-transform: uppercase; font-weight:900;
-    color: var(--gold-lite);
-    text-shadow: 0 0 8px rgba(237,220,145,.25), 0 0 22px rgba(196,161,91,.18);
-  }
-  .notice{
-    margin:0 0 14px; color:var(--ink-2);
-  }
-  .links{ margin-top:22px; display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
-  .btn{
-    padding:12px 16px; border-radius:10px; border:1px solid rgba(84,140,180,.35);
-    text-decoration:none; color:var(--ink);
-    background: linear-gradient(180deg, rgba(84,140,180,.18), rgba(84,140,180,.06));
-    box-shadow: 0 0 0 rgba(84,140,180,0);
-    transition:.2s transform, .2s box-shadow, .2s border-color;
-  }
-  .btn:hover{
-    transform: translateY(-1px);
-    box-shadow: 0 0 14px rgba(84,140,180,.25);
-    border-color: rgba(84,140,180,.55);
-  }
-  footer{ margin-top:22px; opacity:.72; font-size:14px; color:var(--gold-lite); }
-</style>
-</head>
-<body>
-  <div class="brand">THEEM STUDIOS</div>
-
-  <div class="wrap">
-    <main class="card" role="main" aria-label="Coming Soon">
-      <h1>DODGE SKILL | COMING SOON</h1>
-      <p class="notice">We are preparing our game — stay tuned for updates.</p>
-
-      <div class="links" aria-label="Instagram">
-        <a class="btn" href="https://instagram.com/hamz.burak" target="_blank" rel="noopener">Burak • Instagram</a>
-        <a class="btn" href="https://instagram.com/mifudemi" target="_blank" rel="noopener">Adem • Instagram</a>
-        <a class="btn" href="https://instagram.com/muesalmy" target="_blank" rel="noopener">Enes • Instagram</a>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity Web Player | Dodge Skill</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+  </head>
+  <body>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
       </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-logo-title-footer"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">Dodge Skill</div>
+      </div>
+    </div>
+    <script>
+      var canvas = document.querySelector("#unity-canvas");
 
-      <footer>© 2025 THEEM STUDIOS</footer>
-    </main>
-  </div>
-</body>
+      // Shows a temporary message banner/ribbon for a few seconds, or
+      // a permanent error message on top of the canvas if type=='error'.
+      // If type=='warning', a yellow highlight color is used.
+      // Modify or remove this function to customize the visually presented
+      // way that non-critical warnings and error messages are presented to the
+      // user.
+      function unityShowBanner(msg, type) {
+        var warningBanner = document.querySelector("#unity-warning");
+        function updateBannerVisibility() {
+          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        }
+        var div = document.createElement('div');
+        div.innerHTML = msg;
+        warningBanner.appendChild(div);
+        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        else {
+          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          setTimeout(function() {
+            warningBanner.removeChild(div);
+            updateBannerVisibility();
+          }, 5000);
+        }
+        updateBannerVisibility();
+      }
+
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/dodgeskill.game.loader.js";
+      var config = {
+        arguments: [],
+        dataUrl: buildUrl + "/dodgeskill.game.data.br",
+        frameworkUrl: buildUrl + "/dodgeskill.game.framework.js.br",
+        codeUrl: buildUrl + "/dodgeskill.game.wasm.br",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "DefaultCompany",
+        productName: "Dodge Skill",
+        productVersion: "1.0",
+        showBanner: unityShowBanner,
+      };
+
+      // By default, Unity keeps WebGL canvas render target size matched with
+      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+      // Set this to false if you want to decouple this synchronization from
+      // happening inside the engine, and you would instead like to size up
+      // the canvas DOM size and WebGL render target sizes yourself.
+      // config.matchWebGLToCanvasSize = false;
+
+      // If you would like all file writes inside Unity Application.persistentDataPath
+      // directory to automatically persist so that the contents are remembered when
+      // the user revisits the site the next time, uncomment the following line:
+      // config.autoSyncPersistentDataPath = true;
+      // This autosyncing is currently not the default behavior to avoid regressing
+      // existing user projects that might rely on the earlier manual
+      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
+      // expected to change.
+
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        // Mobile device style: fill the whole browser client area with the game canvas:
+
+        var meta = document.createElement('meta');
+        meta.name = 'viewport';
+        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+        document.getElementsByTagName('head')[0].appendChild(meta);
+        document.querySelector("#unity-container").className = "unity-mobile";
+        canvas.className = "unity-mobile";
+
+        // To lower canvas resolution on mobile devices to gain some
+        // performance, uncomment the following line:
+        // config.devicePixelRatio = 1;
+
+
+      } else {
+        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
+      }
+
+      document.querySelector("#unity-loading-bar").style.display = "block";
+
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+          document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
+              }).then((unityInstance) => {
+                document.querySelector("#unity-loading-bar").style.display = "none";
+                document.querySelector("#unity-fullscreen-button").onclick = () => {
+                  unityInstance.SetFullscreen(1);
+                };
+
+              }).catch((message) => {
+                alert(message);
+              });
+            };
+
+      document.body.appendChild(script);
+
+    </script>
+  </body>
 </html>
